--- a/green_monitor_ESP32/platformio.ini
+++ b/green_monitor_ESP32/platformio.ini
@@ -10,5 +10,9 @@
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
-board = esp32doit-devkit-v1
 framework = arduino
+board = esp32doit-devkit-v1
+monitor_speed = 115200
+upload_speed = 921600
+
+
