--- a/green_monitor_ESP32/platformio.ini
+++ b/green_monitor_ESP32/platformio.ini
@@ -14,5 +14,6 @@ framework = arduino
 board = esp32doit-devkit-v1
 monitor_speed = 115200
 upload_speed = 921600
-
-
+lib_deps = 
+	paulstoffregen/OneWire@^2.3.6
+	milesburton/DallasTemperature@^3.9.1
