--- a/green_monitor_ESP32/platformio.ini
+++ b/green_monitor_ESP32/platformio.ini
@@ -17,3 +17,4 @@ upload_speed = 921600
 lib_deps = 
 	paulstoffregen/OneWire@^2.3.6
 	milesburton/DallasTemperature@^3.9.1
+	ottowinter/AsyncMqttClient-esphome@^0.8.6
